@startuml
class Dipendente
{
def __init__(self, nome: str, stipendio: int):
        self.nome = nome
        self.stipendio = stipendio
}
class Manager
{
    def __init__(self, nome, stipendio, numero_di_team):
        super().__init__(nome, stipendio)
        self.numero_di_team = numero_di_team
}
class Sviluppatore
{
    def __init__(self, nome, stipendio, linguaggio_di_programmazione):
        super().__init__(nome, stipendio)
        self.linguaggio_di_programmazione = linguaggio_di_programmazione
}
Dipendente *-- Manager
Dipendente *-- Sviluppatore
@enduml